[project]
name = "drf-restflow"
version = "0.1.0"
description = "Django Rest Flow Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django",
    "djangorestframework",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["restflow*"]
exclude = ["tests*", "docker*"]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "tox>=4.23.2",
    "tox-uv>=1.16.3",
    "dj-database-url>=3.0.1",
    "pytz>=2025.2",
]
lint = [
    "ruff>=0.9.9",
]
postgres = [
    "psycopg2-binary>=2.9.10",
]

[tool.pytest.ini_options]
markers = [
    "postgres: marks tests as requiring PostgreSQL (deselect with '-m \"not postgres\"')",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.report]
include = [ "restflow/*", ]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 80
exclude = [
    ".git",
    ".venv",
    ".tox",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]

ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "ISC001",
    "COM812",
    "RUF012",
    "N806",
    "UP007",
    "DJ001",
    "N802",
    "PT012",
    "F405",
    "UP045"
]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",
    "ARG002",
    "PLR0915",
    "PT011",
    "N802",
    "DJ008",
    "PLC0415",
    "E402"
]

"tests/conftest.py" = [
    "ARG001",
]

"__init__.py" = [
    "F401",
    "F403",
]

[tool.ruff.lint.isort]
known-first-party = ["restflow"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = false
